--- a/demo1/index.html
+++ b/demo1/index.html
@@ -82,8 +82,8 @@
             <a href="#" class="list-group-item">Link</a>
             <a href="#" class="list-group-item">Link</a>
             <a href="#" class="list-group-item">Link</a>
-            <a href="#" class="list-group-item">Link</a>
-            <a href="#" class="list-group-item">Link</a>
+            <a href="#" class="list-group-item">Lisssnk</a>
+            <a href="#" class="list-group-item">Lssssink</a>
           </div>
         </div><!--/span-->
       </div><!--/row-->
