--- a/v-for.html
+++ b/v-for.html
@@ -67,9 +67,9 @@
         el: '#app1',
         data: {
             object: {
-                name: '菜鸟教程',
-                url: 'http://www.runoob.com',
-                slogan: '学的不仅是技术，更是梦想！'
+                name: '你好世界',
+                url: 'http://www.bing.com',
+                slogan: '必应'
             }
         }
     })
